<resources>
    <string name="app_name">Odin</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    Updated by: Matthew Tong
    Updated on: 2020-12-01
    -->

    <!--Toast Messages and Errors-->
    <string name="auth_success">Authentication Success. Welcome.</string>
    <string name="auth_fail">Invalid credentials. Please try again!</string>
    <string name="auth_profile_fail">Profile fetch failed…</string>
    <string name="signIn_fail">SignIn failed with this email. Please try again</string>

    <string name="first_name_error">First name cannot be empty.</string>
    <string name="last_name_error">Last name cannot be empty.</string>
    <string name="eduId_error">Personal ID cannot be empty</string>
    <string name="email_error">Email address cannot be empty.</string>
    <string name="email_error_valid">Please enter a valid email address.</string>
    <string name="password_error">Password cannot be empty.</string>
    <string name="password_error_valid">Invalid Password. Please try again.</string>
    <string name="confirm_pass_error">Please confirm your password.</string>
    <string name="confirm_pass_error_valid">Passwords do not match. Please try again.</string>
    <string name="password_length_error">Password must be at least 6 characters.</string>

    <string name="create_success">User profile created!</string>
    <string name="create_fail">Could not create a user profile</string>
    <string name="acc_create_fail">Account Creation failed. Please Retry.</string>

    <string name="doc_fetch_error">Could not get all documents for exam session -> </string>
    <string name="listening_error">There was an error. See run log…</string>
    <string name="doc_remove_error">Document was unexpectedly removed. id -> </string>

    <string name="copy_message">Exam ID Copied to Clipboard</string>

    <string name="exam_edit_success">Exam info updated!.</string>
    <string name="exam_edit_error">Failed to edit Exam! Please try again.</string>
    <string name="exam_create_error">Exam creation failed! Please try again.</string>
    <string name="exam_title_error">Exam Title cannot be empty. Please try again.</string>
    <string name="exam_date_error">Exam date not set!</string>
    <string name="exam_start_time_error">Exam start fields cannot be empty</string>
    <string name="exam_end_time_error">Exam end fields cannot be empty</string>
    <string name="ad_time_error">Authentication duration fields cannot be empty</string>
    <string name="est_error">Invalid exam start time</string>
    <string name="eet_error">Invalid exam end time</string>
    <string name="ad_error">Invalid Authentication Duration</string>
    <string name="exam_duration_error">Exam duration cannot be 0 minutes.</string>
    <string name="time_error">Invalid time period! Please verify that the end time is after start time.</string>
    <string name="time_logic_error">Invalid exam and auth times! Auth time cannot be outside exam session</string>
    <string name="auth_start_after_exam_ends_error">"Authentication needs to start before the exam ends"</string>
    <string name="auth_longer_than_exam">"Authentication needs to end before the exam ends"</string>
    <string name="general_error">Something went wrong…Please refresh.</string>
    <string name="auth_ended">Auth time has ended.</string>
    <string name="date_error">Date cannot be in the past</string>

    <string name="permissions_success">Permissions Granted!</string>
    <string name="permissions_denied">Permission Denied. Please grant permissions and try again!</string>
    <string name="upload_success">Photo Uploaded! Entering Exam Session…</string>
    <string name="camera_error">Camera could not start…</string>

    <string name="register_success">Registered for exam!</string>
    <string name="get_exam_error">Could not get exam session</string>
    <string name="exam_not_started">Exam has not yet started. Please try later.</string>
    <string name="exam_finished_error">Exam has finished. Please contact proctor for further details.</string>
    <string name="auth_not_started">Authentication time period has not yet started. Please try later.</string>
    <string name="auth_finished">Authentication time has passed. Please contact proctor for next steps.</string>
    <string name="exam_finished">Thank you! The exam has ended and you may now exit.</string>
    <string name="auth_time_error_for_submission">Authentication period is currently inactive.</string>

    <string name="exam_not_found">Exam Session Not Found. Please Retry.</string>

    <!--System messages (prints on console/terminal)-->
    <string name="pause">Activity has paused</string>
    <string name="resume">Activity has resumed</string>

    <!-- Titles and Screen Headings-->
    <string name="title_activity_sign_up">SignUp</string>
    <string name="title_activity_account_confirmation">AccountConfirmation</string>
    <string name="title_activity_welcome_screen">WelcomeScreen</string>
    <string name="welcome_login">Welcome to Odin</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="dashboard">Dashboard</string>
    <string name="exam_creation">Exam Session Creation</string>
    <string name= "exam_edit">Edit Exam Session</string>>
    <string name="photo_submission">Auth Photo Submissions</string>
    <string name="live_monitor">Live Monitoring</string>
    <string name="auth_photo_submission">Authentication Photo Submission</string>
    <string name="exam_register">Exam Registration</string>
    <string name="exam_progress">Exam In Progress</string>
    <string name="exam_finished_title">Exam Ended</string>
    <string name="post_exam_report">Post Exam Report</string>

    <!--Form Hints-->
    <string name="email_hint">E-mail</string>
    <string name="password_hint">Password</string>
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="confirm_pass_hint">Confirm your password</string>
    <string name="exam_time_hint">Exam Time (From - To)</string>
    <string name="exam_duration_hint">Exam Duration</string>
    <string name="auth_time_hint">Auth Time (From - To)</string>
    <string name="id_hint">Personal Id</string>
    <string name="auth_duration_hint">Auth Duration</string>

    <!--Form Elements-->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signup_mess">or Sign Up here</string>

    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="password_detail">Password (at least 6 characters)</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="create">Create</string>
    <string name="create_acc">Create Your Account</string>
    <string name="role_ques">Are you a proctor?</string>

    <string name="register">Register</string>

    <string name="camera">Camera</string>
    <string name="submit">Submit</string>

    <string name="exam_details">Enter Exam Details</string>

    <string name="submitAuthPhoto">Submit Auth Photo</string>

    <string name="back_to_dashboard">Back to Dashboard</string>


    <!--Misc strings-->
    <string name="exam_info">Exam Information</string>
    <string name="header_title">Header Title</string>
    <string name="hello_blank_fragment">Hello World</string>
    <string name="info">Information</string>
    <string name="logout">Logout</string>
    <string name="logout_confirm">Are you sure you want to logout?</string>
    <string name="cancel">Cancel</string>
    <string name="update_exam">Update Exam</string>
    <string name="hours">Hours</string>
    <string name="mins" translatable="false">Min</string>

    <!--Exam Item -->
    <string name="id">Exam ID</string>
    <string name="exam_title">Exam Title</string>
    <string name="exam_time">Exam Time</string>
    <string name="exam_auth_time">Exam Authentication Time</string>
    <string name="exam_date">Exam Date</string>
    <string name="auth_time">Auth Time</string>
    <string name="time_left">Time Left: </string>
    <string name="exam_start">Exam Start Time</string>
    <string name="exam_end">Exam End Time</string>


    <!--Examinee Item-->
    <string name="examinee_name">Examinee Name</string>
    <string name="active">Active</string>
    <string name="inactive">Inactive</string>
    <string name="id_sample">ID: 1234XCvbn4567B</string>
    <string name="email_sample">Email: sampleexaminee@gmail.com</string>
    <string name="no_activity">No Activity</string>
    <string name="reported_activity">Reported Activity</string>

    <!--Activity Log Item-->
    <string name="examinee_activity">(hh:mm:ss) Examinee logged in\n(hh:mm:ss) Examinee sent app to background</string>
    <string name="activity_log">Activity Log</string>
    <string name="submission_timestamp">Submitted At: time stamp</string>

    <!--Fab Buttons-->
    <string name="fab_action">Perform Action</string>
    <string name="live_proctor">Live Proctoring</string>
    <string name="create_exam">Create Exam</string>
    <string name="register_exam">Register Exam</string>
</resources>