<?xml version="1.0" encoding="utf-8"?>
<!--
Created By: Shreya Jain
Created On: November 13, 2020
Updated by: Shreya Jain
Updated on: 2020-11-21
-->
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgAuthPhoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:tint="@color/black" />

        <ImageView
            android:id="@+id/imgFailed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_profile"
            android:minHeight="150dp"
            android:tint="@color/black" />

        <TextView
            android:id="@+id/tvAuthTimeStamp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submission_timestamp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginEnd="16dp"
            android:layout_gravity="right" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardInformation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardCornerRadius="4dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvInformationTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:text="@string/info"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email_sample"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/tvId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/id_sample"
                    android:textColor="@color/black" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardActivityLog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardCornerRadius="4dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:id="@+id/tvActivityLogTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:text="@string/activity_log"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvActivityLog"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/examinee_activity"
                    android:textColor="@color/black" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</ScrollView>

